        * [ADDED]: New option in configuration dialog to decide whether you want to keep NULL values when entering empty strings in cells (new, more intuitive behavior), or overwrite NULLs with empty string values (as it used to be so far).
        * [ADDED]: Editor window has now "Find" and "Replace" toolbar buttons for those functions (which were already there, available under shortcuts).
        * [BUGFIX]: #3118 #3124 Fixed double precision numbers formatting.
        * [BUGFIX]: DbAndroid plugin: Fixed 'adb' automatic detection under Linux.
        * [BUGFIX]: #3126 #3092 Fixed problem with database versions in Android plugin.
        * [BUGFIX]: #3155 Fixed crash when confiriming custom FK value with Enter key.
        * [BUGFIX]: #3094 #3095 Fixed default FK value preselection when tabbing through cells.
        * [BUGFIX]: #3154 Fixed crash when mass replacing token to another token containing initial token.
        * [BUGFIX]: Compilation fixes.

[3.1.0]
        * [ADDED]: SQLCipher plugin is now free, open source and distributed together with other standard plugins.
        * [ADDED]: #2963 Indexed expressions for CREATE INDEX statements (introduced in SQLite 3.9) are now supported and can be edited in Index Dialog.
        * [ADDED]: View window now supports explicit column names for the view (introduced in SQLite 3.9).
        * [ADDED]: #3056 #3063 Implemented index column ordering in index dialog.
        * [ADDED]: Added shortcut (Ctrl+/ by default) to toggle comment of current line or selected block of code (if any) in SQL editor.
        * [ADDED]: #3040 Added new entry in context menu of data grid to generate SELECT/INSERT/UPDATE/DELETE statement together with WHERE clause containing IN conditions for selected cells.
        * [ADDED]: Added new entry in context menu of database list to generate queries like in #3040 for selected table.
        * [ADDED]: #2975 Information message after successful table/view change.